# photo-forge-app

./: .gitignore  EVAL_GUIDE_REAL_PERSON.md  QA_CHECKLIST_MACOS_BETA.md  QA_RUN_REPORT_1.md  QA_RUN_REPORT_2.md  QA_TUNING_REPORT_3.md  QA_TUNING_S06.json  QA_TUNING_S06.md  QA_TUNING_SWEEP_3.json  README.md  README.txt  RELEASE_PLAN_MACOS_BETA.md  config.example.yaml  pyproject.toml  requirements.txt
design/: carbon-dark-mockup.html  stitch-prompts.md  usage-and-export-options.txt
gui/: .gitignore  README_GUI_MACOS.txt  STITCH_UI_SPEC.txt  main.cjs  package-lock.json  package.json  preload.cjs
gui/icons/: icon-pure.icns  icon-warm.icns  icon.icns
gui/renderer/: index.html  renderer.js  styles.css
gui/scripts/: prepare-embedded.sh
ktk_select/: cli.py  detectors.py
photo_culler/: __init__.py  cli.py  config.py  detectors.py
photo_forge/: ai_reviewer.py  cli.py  config.py  detectors.py
ref_source/archive/phase1_cleanup_20260406_191444/: MOVED_FILES.txt
scripts/: build_rc_mac.sh  package_dmg_cli.sh  run_mac.sh  run_win.ps1
tests/eval/: evaluate_predictions.py  make_gt_template.py
tests/samplesets/: README.md  generate_synthetic.py  run_tuning_s06.py  run_tuning_sweep.py
tests/samplesets/S05_real_lite/: eval_result.demo.json  eval_result.demo.md  ground_truth.demo.csv  ground_truth.template.csv  manifest.json  notes.md
tests/samplesets/S06_user_test/: manifest.json  notes.md
