[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-forge"
version = "0.1.0"
description = "Photo Forge batch photo workflow CLI for macOS/Windows"
readme = "README.txt"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "mediapipe>=0.10",
  "pyyaml>=6.0"
]

[project.scripts]
photo-forge = "photo_forge.cli:main"
photoforge = "photo_forge.cli:main"

[tool.setuptools]
packages = ["photo_forge"]
